# foundry-llm

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
docs/: architecture.md
research/: initial_gemini_research.md
src/foundry_llm/: __init__.py
src/foundry_llm/model/: tokenizer.py
src/foundry_llm/utils/: config.py
tests/: test_imports.py  test_tokenizer.py  tiny_shakespeare_sample.txt
